--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </script>
                 </p>
             </h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+<!--             <a href="#" class="btn-rounded-white">Download Resume</a> -->
         </div>
         <!-- End #lead-content -->
 
@@ -321,9 +321,9 @@
             <br>
             <i class="fa fa-phone" aria-hidden="true" style="color: aliceblue; margin-top: 5px; margin-right: 10px;">  (650)476-9865</i>
             <br>
-            <a href="https://github.com/ " target="_blank "><i class="fa fa-github fa-2x" aria-hidden="true" style="color: aliceblue; margin-top: 5px;"></i> <!-- Makes the icon 2 times the normal size -->
+            <a href="https://github.com/DivyamSobti" target="_blank "><i class="fa fa-github fa-2x" aria-hidden="true" style="color: aliceblue; margin-top: 5px;"></i> 
             </a>
-            <a href="https://linkedin.com/ " target="_blank " style="margin-top: 10px; margin-left: 10px;"><i class="fa fa-linkedin fa-2x" aria-hidden="true " style="color: aliceblue;"></i></a>
+            <a href="https://www.linkedin.com/in/divyam-s-03a612121/ " target="_blank " style="margin-top: 10px; margin-left: 10px;"><i class="fa fa-linkedin fa-2x" aria-hidden="true " style="color: aliceblue;"></i></a>
         </div>
         <!-- End #contact-form -->
     </div>
