--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
         <div id="lead-overlay"></div>
 
-        <div id="lead-down">
+<!--         <div id="lead-down">
             <span>
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
             </span>
-        </div>
+        </div> -->
         <!-- End #lead-down -->
     </div>
     <!-- End #lead -->
@@ -180,7 +180,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                         <!-- Replace with your project image -->
-                        <img src="images/project.jpg" />
+                        <img src="images/books.jpg" />
                     </div>
                     <div class="project-info">
                         <h3>Books Catalog Recommendation System</h3>
@@ -194,7 +194,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                         <!-- Replace with your project image -->
-                        <img src="images/project.jpg" />
+                        <img src="images/medical.jpg" />
                     </div>
                     <div class="project-info">
                         <h3>Medicare Geographic Insights</h3>
@@ -208,7 +208,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                         <!-- Replace with your project image -->
-                        <img src="images/project.jpg" />
+                        <img src="images/text.jpg" />
                     </div>
                     <div class="project-info">
                         <h3>Text Generation</h3>
@@ -222,7 +222,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                         <!-- Replace with your project image -->
-                        <img src="images/project.jpg" />
+                        <img src="images/state.jpg" />
                     </div>
                     <div class="project-info">
                         <h3>Exploring State Buildings Sustainability</h3>
@@ -236,7 +236,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                         <!-- Replace with your project image -->
-                        <img src="images/project.jpg" />
+                        <img src="images/process.jpg" />
                     </div>
                     <div class="project-info">
                         <h3>Ferret Mining using Process Mining</h3>
@@ -337,11 +337,11 @@
                         Copyright &copy; <span id="current-year ">2024</span> Divyam Sobti
                     </p>
                 </div>
-                <div class="col-sm-2 top ">
+<!--                 <div class="col-sm-2 top ">
                     <span id="to-top ">
                         <i class="fa fa-chevron-up " aria-hidden="true "></i>
                     </span>
-                </div>
+                </div> -->
             </div>
     </footer>
     <!-- End footer -->
