--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
         </ul>
     </header>
-    <---End header -->
+<!--     <---End header --> -->
 
     <div id="lead">
         <div id="lead-content">
