--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </li>
         </ul>
     </header>
-<!--     <---End header --> -->
+<!--     <---End header -->
 
     <div id="lead">
         <div id="lead-content">
