--- a/index.html
+++ b/index.html
@@ -13,15 +13,47 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <style>
+  /* Project container */
+  .project {
+      display: flex; /* Arrange the project image and info side by side */
+      flex-direction: row; /* Default to row, but this can be overridden in a media query for responsive design */
+      align-items: center; /* Center items vertically */
+      overflow: hidden; /* Prevents overflow of child elements */
+  }
 
-    .project-image img {
-        max-width: 100%;
-        height: auto;
-        object-fit: contain;
-    }
-    
-    /* Add other CSS rules */
+  /* Image container within each project */
+  .project-image {
+      flex-shrink: 0; /* Prevent the image container from shrinking */
+      margin-right: 20px; /* Space between the image and the text */
+      width: auto; /* Width should be auto to avoid stretching */
+      max-width: 100%; /* Contain the image within the bounds of its container */
+  }
+
+  /* Images within the image container */
+  .project-image img {
+      max-width: 100%; /* Ensure the image does not exceed the width of its container */
+      height: auto; /* Keep the image's aspect ratio */
+      object-fit: cover; /* Cover the area of the container. Use 'contain' for no cropping */
+  }
+
+  /* Responsive design adjustments */
+  @media (max-width: 768px) {
+      .project {
+          flex-direction: column; /* Stack the image and text on smaller screens */
+          text-align: center; /* Center the text for a cleaner look on small screens */
+      }
+
+      .project-image {
+          margin-right: 0; /* Remove the right margin as it's no longer needed */
+          margin-bottom: 15px; /* Add some space below the image */
+      }
+
+      .project-image img {
+          width: 100%; /* On smaller screens, the image should take up the full container width */
+      }
+  }
 </style>
+
 </head>
 
 <body>
