--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <img src="images/medical.jpg" />
                     </div>
                     <div class="project-info">
-                        <h3>Medicare Geographic Insights</h3>
+                        <h3 style="color: aliceblue;">Medicare Geographic Insights</h3>
                         <p>October 2023 - Spark | AWS S3 | Power BI
                             <br>Implemented a healthcare data integration solution using Apache Spark, AWS S3, with interactive Power BI dashboards for Medicare analysis.
                         </p>
