--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <img src="images/text.jpg" />
                     </div>
                     <div class="project-info">
-                        <h3>Text Generation</h3>
+                        <h3 style="color: aliceblue;">Text Generation</h3>
                         <p>January 2020 - EDA | PCA | LLM | Generative AI
                             <br>Specialized in Generative AI and NLP for automated text generation, focusing on content coherence and ethical AI guidelines.
                         </p>
