--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                         <!-- Replace with your project image -->
-                        <img src="images/books.jpg" />
+                        <img src="images/book.jpg" />
                     </div>
                     <div class="project-info">
                         <h3>Books Catalog Recommendation System</h3>
@@ -248,7 +248,7 @@
                         <img src="images/medical.jpg" />
                     </div>
                     <div class="project-info">
-                        <h3 style="color: aliceblue;">Medicare Geographic Insights</h3>
+                        <h3 ">Medicare Geographic Insights</h3>
                         <p>October 2023 - Spark | AWS S3 | Power BI
                             <br>Implemented a healthcare data integration solution using Apache Spark, AWS S3, with interactive Power BI dashboards for Medicare analysis.
                         </p>
@@ -262,7 +262,7 @@
                         <img src="images/text.jpg" />
                     </div>
                     <div class="project-info">
-                        <h3 style="color: aliceblue;">Text Generation</h3>
+                        <h3>Text Generation</h3>
                         <p>January 2020 - EDA | PCA | LLM | Generative AI
                             <br>Specialized in Generative AI and NLP for automated text generation, focusing on content coherence and ethical AI guidelines.
                         </p>
