--- a/index.html
+++ b/index.html
@@ -223,86 +223,101 @@
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
-        <div class="container">
-            <!-- Projects will go here -->
-            <div class="row">
-                <!-- Books Catalog Recommendation System -->
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <!-- Replace with your project image -->
-                        <img src="images/book.jpg" />
-                    </div>
-                    <div class="project-info">
-                        <h3>Books Catalog Recommendation System</h3>
-                        <p>March 2023 - Data Mining | Recommendation system | Regression | Clustering | XGBoost
-                            <br>Developed a personalized book recommendation engine, using collaborative filtering and SAS for advanced analytics, enhancing user engagement.
-                        </p>
-                    </div>
+    <h2 class="heading">Projects</h2>
+    <div class="container">
+        <!-- Projects will go here -->
+        <div class="row">
+            <!-- Books Catalog Recommendation System -->
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <!-- Replace with your project image -->
+                    <img src="images/book.jpg" />
                 </div>
-
-                <!-- Medicare Geographic Insights -->
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <!-- Replace with your project image -->
-                        <img src="images/medical.jpg" />
-                    </div>
-                    <div class="project-info">
-                        <h3 ">Medicare Geographic Insights</h3>
-                        <p>October 2023 - Spark | AWS S3 | Power BI
-                            <br>Implemented a healthcare data integration solution using Apache Spark, AWS S3, with interactive Power BI dashboards for Medicare analysis.
-                        </p>
-                    </div>
+                <div class="project-info">
+                    <h3>Books Catalog Recommendation System</h3>
+                    <ul>
+                        <li><b>Date & Technologies:</b> March 2023 - Data Mining, Recommendation System, Regression, Clustering, XGBoost.</li>
+                        <li><b>Description:</b> Crafted an innovative book recommendation engine leveraging collaborative filtering, integrating SAS for cutting-edge analytics.</li>
+                        <li><b>Impact:</b> Significantly boosted user engagement by delivering personalized reading suggestions.</li>
+                    </ul>
                 </div>
-
-                <!-- Text Generation -->
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <!-- Replace with your project image -->
-                        <img src="images/text.jpg" />
-                    </div>
-                    <div class="project-info">
-                        <h3>Text Generation</h3>
-                        <p>January 2020 - EDA | PCA | LLM | Generative AI
-                            <br>Specialized in Generative AI and NLP for automated text generation, focusing on content coherence and ethical AI guidelines.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Exploring State Buildings Sustainability -->
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <!-- Replace with your project image -->
-                        <img src="images/state.jpg" />
-                    </div>
-                    <div class="project-info">
-                        <h3>Exploring State Buildings Sustainability</h3>
-                        <p>December 2022 - R, EDA, PCA
-                            <br>Conducted analysis on sustainability metrics to predict ENERGY STAR Scores and identify factors impacting building performance.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Ferret Mining using Process Mining -->
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <!-- Replace with your project image -->
-                        <img src="images/process.jpg" />
-                    </div>
-                    <div class="project-info">
-                        <h3>Ferret Mining using Process Mining</h3>
-                        <p>October 2022 - Business Intelligence | EDA | PCA | Hypothesis Testing | PMP4Y
-                            <br>Developing solutions for process inefficiencies, utilizing advanced process mining to improve workflow management.
-                        </p>
-                    </div>
-                </div>
-                <!-- End .project-info -->
             </div>
-            <!-- End .project -->
-        </div>
-    </div>
 
-    <!-- End #projects -->
+            <!-- Medicare Geographic Insights -->
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <!-- Replace with your project image -->
+                    <img src="images/medical.jpg" />
+                </div>
+                <div class="project-info">
+                    <h3>Medicare Geographic Insights</h3>
+                    <ul>
+                        <li><b>Date & Technologies:</b> October 2023 - Implemented using Spark, AWS S3, and Power BI.</li>
+                        <li><b>Description:</b> Engineered a comprehensive healthcare data integration system.</li>
+                        <li><b>Features:</b> Enabled Medicare data analysis through interactive, insightful Power BI dashboards.</li>
+                        <li><b>Utility:</b> Facilitated deeper understanding and accessibility of healthcare insights.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Text Generation -->
+<div class="project shadow-large">
+    <div class="project-image">
+        <!-- Replace with your project image -->
+        <img src="images/text.jpg" alt="Text Generation Project" />
+    </div>
+    <div class="project-info">
+        <h3>Text Generation</h3>
+        <ul>
+            <li><b>Date & Technologies:</b> June 2023 - EDA, PCA, fine-tuning LLMs, Generative AI.</li>
+            <li><b>Specialization:</b> Specialized in leveraging advanced Generative AI and NLP for automated text generation. Fine-tuned large language models (LLMs) to enhance precision and relevance.</li>
+            <li><b>Quality Assurance:</b> Conducted thorough testing and validation to ensure quality, originality, and appropriateness of content, adhering to ethical AI guidelines.</li>
+            <li><b>Ethical Compliance:</b> Committed to maintaining high ethical standards in AI text creation.</li>
+        </ul>
+    </div>
+</div>
+
+
+            <!-- Exploring State Buildings Sustainability -->
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <!-- Replace with your project image -->
+                    <img src="images/state.jpg" />
+                </div>
+                <div class="project-info">
+                    <h3>Exploring State Buildings Sustainability</h3>
+                    <ul>
+                        <li><b>Date & Technologies:</b> December 2022 - Relying on R, EDA, PCA.</li>
+                        <li><b>Objective:</b> Analyzed sustainability metrics for predicting ENERGY STAR Scores.</li>
+                        <li><b>Key Achievements:</b> Identified crucial factors affecting building performance.</li>
+                        <li><b>Contribution:</b> Offered insights into enhancing sustainability in state infrastructure.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Ferret Mining using Process Mining -->
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <!-- Replace with your project image -->
+                    <img src="images/process.jpg" />
+                </div>
+                <div class="project-info">
+                    <h3>Ferret Mining using Process Mining</h3>
+                    <ul>
+                        <li><b>Date & Technologies:</b> October 2022 - Business Intelligence, EDA, PCA, Hypothesis Testing, PMP4Y.</li>
+                        <li><b>Project Focus:</b> Aimed at identifying and resolving process inefficiencies.</li>
+                        <li><b>Methodology:</b> Utilized advanced process mining techniques for workflow optimization.</li>
+                        <li><b>Impact:</b> Revolutionized workflow management through data-driven improvements.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End .project-info -->
+        </div>
+        <!-- End .project -->
+    </div>
+</div>
+<!-- End #projects -->
+
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
