--- a/index.html
+++ b/index.html
@@ -130,21 +130,23 @@
     <!-- End #lead -->
 
     <div id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
-                </div>
-                <div class="col-md-8">
-                    <p>
-                        I am Artificail Intelligence master's student at San Jose State University with specialization in Data Science. Currently working as Research assitant at SJSU. I am very keen towards learning new technologies and currently, I am looking for Full time
-                        opportunity in Data Science, Machine learning & software engineering.</p>
-
-                    </p>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h2 class="heading">About Me</h2>
+                <!-- Profile Image -->
+                <img src="path_to_your_profile_picture.jpg" alt="Divyam Sobti" class="profile-picture">
+            </div>
+            <div class="col-md-8">
+                <p>
+                    I am a master's student in artificial intelligence at San Jose State University specializing in data science. Currently working as a Research Assistant at SJSU. I am very keen on learning new technologies, and currently, I am looking for a Full-time opportunity in Data Science, Machine Learning & Software Engineering.
+                </p>
             </div>
         </div>
     </div>
+</div>
+<!-- End #about -->
+
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
