--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <style>
   /* Project container */
   .project {
+      width: 100%; /* Use 100% of the column width */
+    margin: 0 auto; /* Center the card in the column */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* Optional: Adds shadow for depth */
+    transition: 0.3s;
       display: flex;
       flex-wrap: wrap; /* Allow items to wrap */
       margin-bottom: 2em; /* Space between project entries */
