--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <!-- Profile Image -->
                 <div class="project-image">
                     <!-- Replace with your project image -->
-                    <img src="images/dp.heic" alt="Divyam Sobti" class="profile-picture">
+                    <img src="images/dp.jpg" alt="Divyam Sobti" class="profile-picture">
                 </div>
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
