--- a/index.html
+++ b/index.html
@@ -190,28 +190,45 @@
                     <li>Pioneered a deep reinforcement learning-based path planning algorithm for multi-agent systems using PyTorch and CUDA.</li>
                     <li>Conducted advanced sentiment analysis on customer reviews using cutting-edge NLP techniques. Enhanced sentiment analysis accuracy by 20%.</li>
                     <li>Demonstrated expertise in data analysis and NLP applications, focusing on leveraging GMM and other advanced methods such as transformers(BERT).</li>
+                    <li>Enhanced sentiment classification accuracy of Amazon customer reviews by 20% by implementing advanced NLP techniques, refining feature extraction.</li>
+                    <li>Developed NLP models, like Word2Vec, Tf-Idf, GLoVE, GPT, and BERT, to enhance text analysis and semantic understanding capabilities. Constructed word vector models for enhanced language understanding.</li>
+                    <li>Developed an LLM model for question answering using RAG and AWS Bedrock, which processes uploaded files to generate content summaries and answers with an interactive user interface.</li>
+                    <li>Improved marketing strategies by creating a Python-based scraper using RESTAPI, Beautiful Soup, Selenium, Spark, and JSON to extract and analyze data from poorly reviewed Amazon products.</li>
+                    <li>Implemented Deep learning algorithms leveraging TensorFlow and PyTorch, enhancing accuracy of AI systems.</li>
+                    <li>Implemented ETL jobs using AWS Redshift, SQL, and AWS S3 for large-scale data analytics and visualization, resulting in a 20% reduction in query processing time.</li>
+                    <li>Developed and refined data models using SQL and Python, implementing improvements that enhanced the accuracy and effectiveness of business analytics data.</li>
+                    <li>Employed data modeling techniques to analyze market trends, producing BI reports that enhanced the product design team’s understandingz of their customer base by 15%, directly informing development strategies.</li>
                 </ul>
             </div>
             <div data-date="Jan 2022 - Jun 2022">
                 <h3>Laagom, India</h3>
-                <h4>Software Development Engineer</h4>
+                <h4>Data scientist</h4>
                 <p>
                     <ul>
-                        <li>Design and build innovative, user-friendly websites on Bubble.io, conducted user tests for evaluating software stability, and provided technical solutions for CFAs.</li>
-                        <li>Collaborated with design teams, project managers, product owners, and stakeholders to expedite project delivery by 60%. Client service efficiency increased from 50% to 75% using JavaScript, HTML, and CSS.</li>
-                        <li>Proposed and enacted an architectural overhaul of Laagom’s client service application from Glide to Django. Revamping on Django saw a surge in performance by 28%.</li>
+                        <li>Optimized storage and retrieval processes for large-scale datasets, enhancing system efficiency and improving client outreach.</li> 
+                        <li>Utilized advanced NLP and ML techniques to analyze large datasets and extract meaningful insights, significantly enhancing data-driven decision-making and optimizing user engagement strategies.</li> 
+                        <li>Significantly improved system responsiveness and interaction quality by elevating natural language understanding and dialogue generation functionalities, deploying advanced AI models such as BERT.</li> 
+                        <li>Achieved a 20% increase in data throughput efficiency by optimizing ETL workflows for scalable data analytics using Pandas, SQL, and Python scripting.</li> 
+                        </li>    
+                        <li>Used Tableau, and Power BI to visualize performance metrics, increasing department transparency and alignment. Revamping application performance.</li>
+                        <li>Optimized data extraction and reporting processes by developing SQL queries and leveraging GCP’s BigQuery, resulting in a 25% reduction in data retrieval times and enhanced data accessibility for stakeholders.</li> 
+                        <li>Applied statistical techniques to analyze market data, delivering insights that informed and shaped effective business strategies.</li>
                     </ul>
                 </p>
             </div>
 
             <div data-date="Jul 2020- Jan 2022">
                 <h3>GND Rail Power Solutions, India</h3>
-                <h4>Software & Data Engineer</h4>
+                <h4>Data analysis Engineer</h4>
                 <p>
                     <ul>
-                        <li>Conducted automated and manual testing on communication software integrated with an Ethernet-based module (TCMS) to ensure optimal passenger safety.</li>
-                        <li>Co-led troubleshooting and testing of Passenger Information system, ensuring smoother operation.</li>
-                        <li>Led QA testing for CCTV Systems, reducing defects by 50% and enhancing passenger safety.</li>
+                        <li>Streamlined ETL processes using Airflow, Apache Spark, and Python, enhancing the throughput of the data processing pipeline by 20%.</li>
+                        <li>Boosted collaborative efficiency by working closely with product teams to design and iterate on data pipelines and ML models, regularly communicating complex data processes to technical and non-technical teams.</li>
+                        <li>Developed and optimized ML models using Regression, SVM, and Gradient Boosting, leading to improved accuracy through feature selection and hyperparameter tuning.</li>
+                        <li>Leveraged intermediate SQL, Python, and Tableau skills to address business problems by locating, integrating, and analyzing data sources.</li>
+                        <li>Collaborated with different teams from Business and Operations teams to align data-driven strategies and ensure successful project execution.</li>
+                        <li>Assisted in developing ad-hoc reports that delivered clear, actionable insights to enhance strategic decision-making.</li>
+                        <li>Enhanced user experience by developing a machine learning model that leverages customer reviews and product data, identifying key areas for product improvement and driving targeted enhancements</li>
                     </ul>
 
 
@@ -220,12 +237,18 @@
 
             <div data-date="Jan 2020- Jul 2020">
                 <h3>Oceana Technology, India</h3>
-                <h4>Software Engineer, Intern</h4>
+                <h4>Software Engineer - Data</h4>
                 <p>
                     <ul>
-                        <li>Developed an application- Bidding Mart- to provide various customer-based services. </li>
-                        <li>Oceana Tech leveraged the application to sell products, optimizing application performance and resulting in a 55% increase in throughput.
-                        </li>
+                        <li>Created data-driven visual narratives using Tableau and Power BI, effectively highlighting key trends and aligning decisions with business goals. </li>
+                        <li>Contributed to AI-driven initiatives to develop data-driven product solutions enhancing user experience. </li>
+                        <li>Used Excel for in-depth statistical modelling, enabling precise data manipulation and insightful reporting to support strategic business decisions and operational efficiency.</li>
+                        <li>Spearheaded the adoption of a NoSQL database management system for unstructured data, enhancing market data analytics accessibility by 25% for accelerating decision-making processes.</li>
+                        <li>Streamlined ETL processes for scalable data analytics using Airflow, SQL and Python, enhancing throughput of data processing pipeline by 20%.</li>
+                        <li>Utilized visualization tools to demonstrate business trends, leading to more actionable marketing strategies.</li>
+                        <li>Conducted exploratory data analysis using Python and Tableau, informing team members and counterparts of critical findings, which enhanced strategic decision-making.</li>
+                        <li>Developed models to identify customer behavior patterns, enhancing targeted engagement strategies by 20%.</li>
+                        
                     </ul>
 
                 </p>
@@ -414,7 +437,7 @@
         <div id="contact-form">
 
             <i class="fa fa-envelope" aria-hidden="true"></i>
-            <a href="mailto:" style="color: aliceblue; margin-left: 10px;">divyamsobti14@gmail.com</a>
+            <a href="mailto:" style="color: aliceblue; margin-left: 10px;">divyamsobti98@gmail.com</a>
             <br>
             <i class="fa fa-phone" aria-hidden="true" style="color: aliceblue; margin-top: 5px; margin-right: 10px;">  (650)476-9865</i>
             <br>
